--- a/contact.html
+++ b/contact.html
@@ -118,7 +118,7 @@
         <input type="submit" value="send message" class="btn">
     </form>
 
-    <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15076.89592087332!2d72.8319697277345!3d19.14167056419224!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7b63aceef0c69%3A0x2aa80cf2287dfa3b!2sJogeshwari%20West%2C%20Mumbai%2C%20Maharashtra%20400047!5e0!3m2!1sen!2sin!4v1638365961619!5m2!1sen!2sin" allowfullscreen="" loading="lazy"></iframe>
+    <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d20882.949355948505!2d114.1805065834926!3d22.29242636063997!3m2!1i1024!2i768!4f13.1!5e0!3m2!1szh-TW!2shk!4v1668096430801!5m2!1szh-TW!2shk" allowfullscreen="" loading="lazy"></iframe>
 
 </section>
 
